--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,8 @@
 $cassette_base_height: 80px !default;
-$cassette_base_bg_color: #080c18 !default;
-$cassette_base_text_color: #e6e3e8 !default;
+$cassette_base_bg_color: #372d34 !default;
+$cassette_base_text_color: #a75f81 !default;
 
-$cassette_btn_bg_color: #e6e3e8 !default;
+$cassette_btn_bg_color: #a75f81 !default;
 $cassette_btn_height: $cassette_base_height !default;
 $cassette_btn_margin: 4px !default;
 $cassette_btn_padding: 11px !default;
